# college-alg-2-image-search

./: README.md  main.py  pyproject.toml
report/: BBF算法在图像检索中的实现与性能评估.md  log.txt
src/: config.py  kdtree_bbf.py  step_1_download_data.py  step_2_extract_features.py  step_3_evaluate_ann.py  step_4_plot_results.py  utils.py
